[package]
name = "threeribbon"
version = "0.1.0"
edition = "2021"

[dependencies]
three-d = "0.18.0"  
three-d-asset = {version = "0.9",features = ["png", "jpeg", "http"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
